# FinalProject

./: README.md  citations.txt
python/class/: image_processing_module.py
python/fakemodel/: model_robot.py  model_robot_functions.py
python/functions/: convert_dicom.py  detect_BB_intrinsic.py  image_processing.py  marker_centers.json
ros/ws-v2/src/robot_tags/: package.xml  setup.cfg  setup.py
ros/ws-v2/src/robot_tags/config/: frames.rviz  (+2 more)
ros/ws/robot_assisted_surgery/: package.xml  setup.cfg  setup.py
ros/ws_final/src/robot/: package.xml  setup.py
ros/ws_final/src/robot/config/: realsense_intrinsics_2024_08_15.yaml  realsense_intrinsics_2024_08_20.config.yaml  rviz_config.rviz  side_carm_intrinsics_2024_08_16.yaml  sidefiducial1.json  sidefiducial2.json  sidefiducial3.json  sidemarker_centers.json  tags.yaml  top_carm_intrinsics_2024_08_16.yaml  topfiducial1.json  topfiducial2.json  topfiducial3.json  topmarker_centers.json
ros/ws_final/src/robot/images/dicom/side_carm/: IM00014.dcm  IM00015.dcm  IM00016.dcm  IM00017.dcm  IM00018.dcm  IM00019.dcm  IM00020.dcm  IM00021.dcm  IM00022.dcm  IM00023.dcm  IM00024.dcm  IM00025.dcm  IM00026.dcm  IM00027.dcm  IM00028.dcm  IM00029.dcm
ros/ws_final/src/robot/images/dicom/top_carm/: IM00001.dcm  IM00002.dcm  IM00003.dcm  IM00004.dcm  IM00005.dcm  IM00006.dcm  IM00007.dcm  IM00008.dcm  IM00009.dcm  IM00010.dcm  IM00011.dcm  IM00012.dcm  IM00013.dcm
ros/ws_final/src/robot/launch/: node.launch.xml
ros/ws_final/src/robot/robot/: blob_detection_functions.py  camera_calibration.py  move_robot.py  move_robot_functions.py
(+10 files in other folders)
