<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot</name>
  <version>1.0.0</version>
  <description>Handles all camera calibration, images processing, trajectory calculation, and robot movement</description>
  <maintainer email="kass92800@gmail.com">Kassidy Shedd</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>opencv-python</depend>
  <depend>apriltag</depend>
  <depend>pyyaml</depend>
  <depend>numpy</depend>
  <depend>interbotix_xs_modules</depend>
  <depend>modern_robotics</depend>
  <depend>pillow</depend>
  <depend>pydicom</depend>
  <depend>pyrealsense2</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
